fix spacing issue on artist info pages w/links

--- a/assets/styles/artist.scss
+++ b/assets/styles/artist.scss
@@ -301,10 +301,10 @@ h1, h2, h3{
             width: 100%;
             right: 0;
             bottom: 5%;
-            margin-top: 150px;
             ul{
                 list-style-type: none;
                 text-align: center;
+                padding-top: 50px;
                 li{
                     font-size: 1em;
                     margin: 40px;
